# Core

./: .env.example  .gitignore  .gitmodules  .wakatime-project  AGENTS.md  CMakeLists.txt  Next-steps.md  TODO's.md  buildOutput.txt  docs-index.md  get_next_build_number.py  incr_build_num.cmake  install-deps.sh  package-lock.json  readme.md
.github/: FUNDING.yml  semgrep.yml
.github/workflows/: c-cpp.yml  sast.yml  sast2.yml
benchmarks/: logger.bench.cpp  main.cpp
cmake/: patch_websocketpp_boost188.cmake
data/: bt_control.json
data/capabilities/: core.play_sound.json
docs/: openapi.yaml
docs/contracts/transcription-v1/: openapi.yaml  ws-events.schema.json
http/: app.js  auth.html  auth.js  developer.html  index.html  style.css
localization/: readme.md
localization/mo/en_US/: gui.cpp.pot
localization/po/: gui.cpp.pot
postgresql/: manifest.json
src/: config.cpp  lazyLoader.h  main.cpp  main.h  threadsafeQueue.h  utils.cpp  utils.h
src/api/: InterfaceCount.h  api.cpp  api.h  apiEventBroker.cpp  apiEventBroker.h  api_i.h  auth-planning.md  authentication.cpp  authentication.h  autoRegister.h  builder.cpp  builder.h  eventsAPI.cpp  eventsAPI.h  readme.md
src/api/eventDaemon/: eventDaemonProtocol.cpp  eventDaemonProtocol.h  eventDaemonService.cpp  eventDaemonService.h  eventDaemonSession.cpp  eventDaemonSession.h
src/apps/: RunningApp.cpp  RunningApp.h  appLauncher.cpp  appPostgresAccess.cpp  appPostgresAccess.h  appsDBManager.cpp  appsDBManager.h  appsManager.cpp  appsManager.h  dockerApi.cpp  dockerApi.h  exampleApp.manifest.json  exampleApp.manifest.yml  nativeApi.cpp  nativeApi.h  pythonApi.cpp  pythonApi.h  the_cube_app_launch_and_sandboxing_plan.md
src/apps/docker/: dockerApi.cpp  dockerApi.h
src/audio/: audioCapture.cpp  audioCapture.h  audioManager.cpp  audioManager.h  audioOutput.cpp  audioOutput.h  audioRouter.cpp  audioRouter.h  constants.h  micAutoLevel.cpp  micAutoLevel.h  output.cpp  sileroVad.cpp  sileroVad.h  speechIn.cpp  speechIn.h  voiceInteractionManager.cpp  voiceInteractionManager.h  wakeWordClient.cpp  wakeWordClient.h
src/database/: chatHistoryStore.cpp  chatHistoryStore.h  cubeDB.cpp  cubeDB.h  db.cpp  db.h
src/decisionEngine/: cubeWhisper.cpp  cubeWhisper.h  decisions.cpp  decisions.h  decisionsError.hpp  functionRegistry.cpp  functionRegistry.h  function_capability_spec_impl.cpp  function_runner_impl.cpp  function_specs_impl.cpp  function_utils_impl.cpp  intentRegistry.cpp  intentRegistry.h  interfaceDefs.hpp  notificationCenter.cpp  notificationCenter.h  personalityManager.cpp  personalityManager.h  remoteApi.h  remoteServer.cpp  remoteServer.h  scheduler.cpp  scheduler.h  transcriber.cpp  transcriber.h  transcriptionEvents.cpp  transcriptionEvents.h  triggers.cpp  triggers.h
src/gui/: GLFW Migration.md  SFML toGLFW Migration.md  character.cpp  character.h  characterManager.cpp  characterManager.h  characterManger.cpp  gui.cpp  gui.h  notifications.cpp  notifications.h  objects.h  renderer.cpp  renderer.h  shader.cpp  shader.h  statusBar.cpp  statusBar.h  test.pot
src/gui/characters/: cube.cpp  cube.h  theCube.cpp  theCube.h
src/gui/eventHandler/: cubeEvent.cpp  cubeEvent.h  eventHandler.cpp  eventHandler.h
src/gui/menu/: exampleMenuData.json  exampleMenuData2.json  menu.cpp  menu.h
src/gui/messageBox/: messageBox.cpp  messageBox.h
src/gui/renderables/: meshLoader.cpp  meshLoader.h  meshObject.h  shapes.cpp  shapes.h  theCube._cpp  theCube._h  theCube.cpp  theCube.h
src/gui/shaders/: edges.fs  edges.vs  menuStencil.fs  menuStencil.vs  text.fs  text.vs
src/hardware/: accel.cpp  accel.h  bluetooth.cpp  bluetooth.h  eeprom.cpp  eeprom.h  fanCtrl.cpp  fanCtrl.h  hardwareInfo.cpp  hardwareInfo.h  imu.cpp  imu.h  interactionAPI.cpp  interactionAPI.h  interactionEventBridge.cpp  interactionEventBridge.h  interactionEvents.cpp  interactionEvents.h  ioBridge.cpp  mmWave.cpp  mmWave.h  mmWave.md  mmWaveCalibration.cpp  mmWaveCalibration.h  mmWavePresenceEstimator.cpp  mmWavePresenceEstimator.h  mmWaveSerialLifecycle.cpp  mmWaveSerialLifecycle.h  mmWaveTuner.cpp  mmWaveTuner.h  nfc.cpp  nfc.h  peripheralManager.cpp  peripheralManager.h  pi_i2c.cpp  pi_i2c.h  spi.cpp  spi.h  systemCtrl.cpp  systemCtrl.h  (+2 more)
src/hardware/io_bridge/: IO_Bridge_Specification.md  gpio.cpp  gpio.h  i2c.cpp  i2c.h  ioBridge.cpp  ioBridge.h  ioBridge.md  spi.cpp  spi.h  uart.cpp  uart.h
src/logger/: logger.cpp  logger.h
src/peripherals/: hardwareInfo.cpp  peripheralManager.cpp
src/personality/: Companion_TheCube_Personality_Traits.md  personalityManager.cpp  personalityManager.h
src/settings/: globalSettings.cpp  globalSettings.h  loader.cpp  loader.h
src/systemDevs/: bt.h  systemDevsManager.h  wifi.h
src/telemetry/: telemetry.cpp  telemetry.h
ssl/: generateCert.sh
tests/: main.cpp  utils.test.cpp
tests/api/: apiEventBroker.test.cpp  api_integration_auth_private.test.cpp  api_response_body.test.cpp  authentication.test.cpp  eventDaemonProtocol.test.cpp  eventDaemonService.test.cpp  eventsAPI.test.cpp  events_api_integration_auth.test.cpp
tests/apps/: appPostgresAccess.test.cpp  appsManager.test.cpp
tests/audio/: mic_auto_level.test.cpp  silero_vad.test.cpp
tests/database/: chat_history_store.test.cpp  db.test.cpp
tests/decisionEngine/: decision_engine_support.test.cpp  decisions.test.cpp  function_registry.test.cpp  function_registry_edge.test.cpp  notification_center.test.cpp  remote_server.test.cpp  transcriber.test.cpp
tests/gui/: cube_event.test.cpp  event_handler.test.cpp
tests/hardware/: accel.test.cpp  fanCtrl.test.cpp  hardwareInfo.test.cpp  interactionAPI.test.cpp  mmWaveCalibration.test.cpp  mmWavePresenceEstimator.test.cpp  mmWaveSerialLifecycle.test.cpp  peripheralManager.test.cpp  pi_i2c.test.cpp
tests/hardware/io_bridge/: spi.test.cpp
tests/logger/: logger.test.cpp
tests/settings/: globalSettings.test.cpp
tests/utils/: countinglatch.test.cpp  taskqueue.test.cpp  threadsafeQueue.test.cpp
tooling/: add_file_headers.py  get_next_build_number.py  update_todos.py  upload_artifact.py
(+30 files in other folders)
